Fixed home page cover issue on mobile devices

--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -108,16 +108,18 @@ header {
           url('../images/home.jpg'), 0.6, 0.2);
 }
 
-.bg-gray-dots {
-  background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z5+AAAAG0lEQVQIW2NkYGD4z8DAwMgABXAGNgGwSgwVAFbmAgXxvZSoAAAAAElFTkSuQmCC);
-}
+@media screen and (min-width: $pageM) {
+  .bg-gray-dots {
+    background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z5+AAAAG0lEQVQIW2NkYGD4z8DAwMgABXAGNgGwSgwVAFbmAgXxvZSoAAAAAElFTkSuQmCC);
+  }
 
-.bg-lightgray-dots {
-  background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z5+AAAAHElEQVQIW2M8vGvdf1u3IEYGKIAzMARgKjFUAABeTQgF7IlyLgAAAABJRU5ErkJggg==');
-}
+  .bg-lightgray-dots {
+    background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z5+AAAAHElEQVQIW2M8vGvdf1u3IEYGKIAzMARgKjFUAABeTQgF7IlyLgAAAABJRU5ErkJggg==');
+  }
 
-.static {
-  background-attachment: fixed;
+  .static {
+    background-attachment: fixed;
+  }
 }
 
 .page-full {
